
package usantatecla.mastermind.models;

import usantatecla.mastermind.types.StateValue;

public interface Session {

    StateValue getValueState();
	
}